Add demo backend example with core endpoints and configuration instructions